--- a/Styles/Style_prod.css
+++ b/Styles/Style_prod.css
@@ -30,16 +30,18 @@ img#btnInicio {
     z-index: 1;
 }
 #article>div{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+#article>div>div{
     border: 3px solid grey;
     border-radius: 15px;
     margin-top: 5%;
     margin-bottom: 5%;
     margin-right: 5%;
     margin-left: 5%;
-}
-#article>div>div{
-    margin-left: 1%;
-    margin-top: 1%;
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(2,1fr);
     
@@ -50,7 +52,6 @@ p{
     font-size: 20px
 }
 #article>div>div>div{
-    
     flex-direction: column;
 }
 .textos{
@@ -100,4 +101,14 @@ p{
 }
 .competencia{
     margin-left: 5%;
+}
+#imgDiv, .textos{
+    width: 100%;
+    margin-right: 1.5em;
+    margin-left: 1.5em;
+    margin-top: 1.5em;
+}
+#imgDiv img{
+    border: 2px solid #000;
+    border-radius: 10px;
 }
